--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
 
             <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
               <!-- Starting of ajax contact form -->
-    <form class="contact__form" method="post" action="contact_mail.php">
+<!--    <form class="contact__form" method="post" action="contact_mail.php">-->
+		<form action="https://formspree.io/challenge.ale@gmail.it" method="POST" />
       <!-- Element of the ajax contact form -->
       <div class="row">
           <div class="col-md-6 form-group">
