--- a/index.html
+++ b/index.html
@@ -284,11 +284,12 @@
   </div>
   </div>
   <footer class="text-center pos-re">
+  <footer class="text-center pos-re">
     <div class="container">
       <div class="footer__box">
         <!-- Logo -->
         <a class="logo" href="#">
-            <img src="img/logo-light.png" alt="logo" height="50">
+            <img src="img/logo-completo.png" alt="logo" width="30%" class="mt-5">
         </a>
 
         <div class="social">
